[package]
name = "aci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aci"
crate_type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
ctor = "0.2.2"
libc = "0.2.146"
libloading = "0.8.0"
null-terminated = "0.3.17"
